--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,17 @@ steps:
   displayName: 'Build Nuxt'
 
 - script: |
-    yarn test -w=2
-  displayName: 'Run tests'
+        JEST_SUITE_NAME="Fixtures" JEST_JUNIT_OUTPUT="./junit1.xml" jest
+        yarn test:fixtures -w=2
+  displayName: 'Test: Build Fixtures'
+
+- script: |
+        JEST_SUITE_NAME="Unit" JEST_JUNIT_OUTPUT="./junit2.xml" jest
+        yarn test:unit -w=2
+  displayName: 'Test: Run unit tests'
 
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**/junit.xml' 
+    testResultsFiles: '**/junit*.xml' 
   displayName: 'Publish test results to Azure Pipelines'
