--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "lint:app": "eslint-multiplexer eslint --ignore-path packages/app/template/.eslintignore 'test/fixtures/!(missing-plugin)/.nuxt!(-dev)/**' | eslint-multiplexer -b",
     "nuxt": "node -r esm ./packages/cli/bin/nuxt.js",
     "test": "yarn test:fixtures && yarn test:unit",
-    "test:fixtures": "jest test/fixtures",
-    "test:e2e": "jest -i test/e2e",
+    "test:fixtures": "jest test/fixtures --reporters=default --reporters=jest-junit",
+    "test:e2e": "jest -i test/e2e --reporters=default --reporters=jest-junit",
     "test:lint": "yarn lint",
-    "test:unit": "jest test/unit",
+    "test:unit": "jest test/unit --reporters=default --reporters=jest-junit",
     "postinstall": "lerna link && node -r esm ./scripts/dev"
   },
   "devDependencies": {
