--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "lint:app": "eslint-multiplexer eslint --ignore-path packages/app/template/.eslintignore 'test/fixtures/!(missing-plugin)/.nuxt!(-dev)/**' | eslint-multiplexer -b",
     "nuxt": "node -r esm ./packages/cli/bin/nuxt.js",
     "test": "yarn test:fixtures && yarn test:unit",
-    "test:fixtures": "jest test/fixtures",
-    "test:e2e": "jest -i test/e2e",
+    "test:fixtures": "JEST_JUNIT_OUTPUT=./test-fixtures-junit.xml jest test/fixtures",
+    "test:e2e": "JEST_JUNIT_OUTPUT=./test-e2e-junit.xml jest -i test/e2e",
     "test:lint": "yarn lint",
-    "test:unit": "jest test/unit",
+    "test:unit": "JEST_JUNIT_OUTPUT=./test-unit-junit.xml jest test/unit",
     "postinstall": "lerna link && node -r esm ./scripts/dev"
   },
   "devDependencies": {
