--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**/test*.xml' 
+    testResultsFiles: '**/junit*.xml' 
   displayName: 'Publish test results to Azure Pipelines'
